--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     color: #fff;
     font-family: "Poppins", serif;
     min-height: 100vh;
+    /* position: relative; */
 }
 
 header{
@@ -23,14 +24,14 @@ form{
     align-items: center;
 }
 
-form input, form button{
+form input, form button, .error-btn{
     padding: 0.5rem;
     font-size: 2rem;
     border: none;
     background-color: #fff;
 }
 
-form button{
+form button, .error-btn{
     color: #d88771;
     background-color: #fff;
     cursor: pointer;
@@ -133,4 +134,41 @@ select{
 .select:hover::after{
     background: white;
     color: #ff6f47;
+}
+
+/* error */
+.error-container{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 4rem;
+    margin: 0 auto;
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+    color: #fff;
+    background-color: #ff6f47;
+}
+
+.error-text{
+    text-transform: uppercase;
+    align-items: center;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.error-btn{
+    padding: 0.5rem 4rem;
+    text-transform: uppercase;
+    border: 2px solid transparent;
+    transition: all .5s ease;
+}
+
+.error-btn:hover{
+    background: transparent;
+    border: 2px solid #d15b3a;
+    color: #fff;
 }
